--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="row">
-       <!--  <div class="col-6">
+     <div class="col-6">
           <div id="camera" class="profile" style="max-width: 250px;">
             <video autoplay id="camera-video"></video>
             <button id="camera-button" class="btn btn-primary">Take Photo</button>
@@ -95,7 +95,6 @@
         <div class="col-6">
           <canvas id="camera-canvas"></canvas>
         </div>
-        -->
       </div>
 
       <h3>RSVP Form</h3>
